--- a/Serie-1/Exo-5/index.html
+++ b/Serie-1/Exo-5/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exo 5</title>
     <style>
-        * {font-family: sans-serif;font-size: large;}
+        * {font-family: sans-serif;}
+        table,th,td {
+            font-size: large;border: 1px solid black;
+            border-collapse: collapse;padding: 10px;
+        }
     </style>
 </head>
 
 <body>
-    <h2>Table de multiplication de 0 à 9</h2>
-    <div id="multiplication-table"></div>
-    <script src="./script.js"></script>
+    <h1>Table de multiplication</h1>
+    <table id="table">
+        <thead>
+            <tr>
+                <th></th>
+                <th>0</th>
+                <th>1</th>
+                <th>2</th>
+                <th>3</th>
+                <th>4</th>
+                <th>5</th>
+                <th>6</th>
+                <th>7</th>
+                <th>8</th>
+                <th>9</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+    <script src="script.js"></script>
 </body>
 
 </html>
